--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bulma": "^0.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geocode": "^0.2.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
